crates/hydracache-db/tests/policy/fail_prepared_flat_tag_segments.rs
use hydracache_db::prepared_query_policy;

fn main() {
    let _policy = prepared_query_policy!(
        key_segments = ["tenant", 7_u64],
        tag_segments = ["tenant", 7_u64],
        ttl_secs = 30,
    );
}
